# SEC-G5

./: hardware.ppm  software.ppm
.wsdata/: clang_dir_map.json
Lab0_prof/axilite_matprod_files/HLS/: axil_mat_prod1.cpp  axil_mat_prod1.h  tb_axil_mat_prod1.cpp
Lab0_prof/axilite_matprod_files/HW-SW/: matprod.c
app_lab1/: compile_commands.json  vitis-comp.json
app_lab1/_ide/: hwspec.checksum
app_lab1/_ide/.theia/: launch.json
app_lab1/_ide/bitstream/: design_1_wrapper.bit
app_lab1/_ide/psinit/: ps7_init.tcl
app_lab1/src/: CMakeLists.txt  app.yaml  image_conv2D.c  image_conv2D.h
lab0_platform/: vitis-comp.json
lab0_platform/hw/: design_1_wrapper.xsa
lab0_platform/hw/sdt/: pl.dtsi  system-top.dts
lab0_platform/zynq_fsbl/: CMakeLists.txt  app.yaml  compile_commands.json
lab0_platform/zynq_fsbl/zynq_fsbl_bsp/: bsp.yaml  lop-config.dts.dtb  lop-config.dts.pp
lab0_vivado/: design_1_wrapper.xsa  lab0_vivado.xpr
lab1_hls/: compile_commands.json  hls_config.cfg  vitis-comp.json
lab1_hls/axil_conv2D/: axil_conv2D.hlscompile_summary  axil_conv2D.hlsrun_cosim_summary  axil_conv2D.hlsrun_csim_summary  axil_conv2D.hlsrun_package_summary
lab1_prof/: README.txt
lab1_prof/hls/: axil_conv2D.cpp  axil_conv2D.h  readme.txt  tb_axil_conv2D.cpp
lab1_prof/host/: readme.txt
platform_lab1/: vitis-comp.json
platform_lab1/hw/: design_1_wrapper.xsa
platform_lab1/zynq_fsbl/: CMakeLists.txt  app.yaml
project_1/: project_1.xpr
project_1/project_1.ip_user_files/mem_init_files/: CMakeLists.txt  axil_mat_prod1.yaml
project_2/: project_2.xpr
(+878 files in other folders)
